--- a/public/css/style.css
+++ b/public/css/style.css
@@ -170,3 +170,29 @@ input[type="submit"] {
 input[type="submit"]:hover {
   background-color: #ad4f48;
 }
+
+/*alert*/
+.alert {
+  margin-top: 10px;
+  margin-bottom: 10px;
+  padding: 5px;
+  background-color: #04aa6d;
+  color: white;
+  text-align: center;
+}
+
+.closebtn {
+  text-align: center;
+  margin-left: 6px;
+  color: white;
+  font-weight: bold;
+  float: right;
+  font-size: 22px;
+  line-height: 20px;
+  cursor: pointer;
+  transition: 0.3s;
+}
+
+.closebtn:hover {
+  color: black;
+}
