--- a/public/css/style.css
+++ b/public/css/style.css
@@ -30,10 +30,14 @@ body {
 }
 
 .container {
-  padding: 0.01em 16px;
+  padding: 2px 16px;
   content: "";
   display: table;
   clear: both;
+}
+
+.containerB {
+  display: flex;
 }
 
 #customers {
@@ -219,4 +223,15 @@ input[type="submit"]:hover {
 
 .hidden {
   display: none;
+}
+
+.card {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  transition: 0.3s;
+  padding: 10px;
+  border-radius: 5px;
+}
+
+img {
+  border-radius: 5px 5px 0 0;
 }
