--- a/public/css/style.css
+++ b/public/css/style.css
@@ -40,27 +40,27 @@ body {
   display: flex;
 }
 
-#customers {
+#tabledetail {
   font-family: Arial, Helvetica, sans-serif;
   border-collapse: collapse;
   width: 100%;
 }
 
-#customers td,
-#customers th {
+#tabledetail td,
+#tabledetail th {
   border: 1px solid #ddd;
   padding: 8px;
 }
 
-#customers tr:nth-child(even) {
+#tabledetail tr:nth-child(even) {
   background-color: #f2f2f2;
 }
 
-#customers tr:hover {
+#tabledetail tr:hover {
   background-color: #ddd;
 }
 
-#customers th {
+#tabledetail th {
   padding-top: 12px;
   padding-bottom: 12px;
   text-align: left;
