--- a/public/css/style.css
+++ b/public/css/style.css
@@ -235,3 +235,13 @@ input[type="submit"]:hover {
 img {
   border-radius: 5px 5px 0 0;
 }
+
+input[type="file"] {
+  display: none;
+}
+.custom-file-upload {
+  border: 1px solid #ccc;
+  display: inline-block;
+  padding: 6px 12px;
+  cursor: pointer;
+}
