--- a/public/css/style.css
+++ b/public/css/style.css
@@ -156,6 +156,17 @@ select {
   box-sizing: border-box;
 }
 
+input[type="date"],
+select {
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+
 input[type="number"],
 select {
   width: 100%;
